Turn on warnings, fix some. Emit 64-bit offsets.

--- a/warcsum/Makefile.in
+++ b/warcsum/Makefile.in
@@ -149,7 +149,7 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
-CFLAGS = -fwrapv @CFLAGS@
+CFLAGS = -fwrapv -Wall -Wextra @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
