Correct linking of warcsum with autotools
I don't know much about autotools, but blindly guessing that we need to refer
to symbols that actually exist to link against libraries works out. Explicit
-l options in CFLAGS come too early (before object files) so linking against DSOs
fails with a message like:

    /usr/bin/ld: warcsum-warcsum.o: undefined reference to symbol 'inflateReset2@@ZLIB_1.2.3.4'

--- a/warcsum/Makefile.am
+++ b/warcsum/Makefile.am
@@ -5,8 +5,6 @@ bin_PROGRAMS = \
 warcsum_SOURCES = \
   warcsum.c
 
-warcsum_CFLAGS= -Wl,-rpath -Wl,LIBDIR -lcrypto -lgzmulti -lz
-
  man_MANS = \
   warcsum.1 \
   warccollres.1
@@ -14,7 +12,7 @@ warcsum_CFLAGS= -Wl,-rpath -Wl,LIBDIR -lcrypto -lgzmulti -lz
 warccollres_SOURCES = \
   warccollres.c
 
-warccollres_CFLAGS= -Wl,-rpath -Wl,LIBDIR -lcurl -I/usr/include/mysql -DBIG_JOINS=1 -fno-strict-aliasing -L/usr/lib/x86_64-linux-gnu -lmysqlclient -lpthread -lm -lrt -ldl -lgzmulti -lconfig -lz
+warccollres_CFLAGS= -I/usr/include/mysql -DBIG_JOINS=1 -fno-strict-aliasing
 
 dist_bin_SCRIPTS = \
   warcsumproc \
